--- a/_includes/layouts/script.njk
+++ b/_includes/layouts/script.njk
@@ -10,25 +10,8 @@ title: Christa's WebZone
     <title>{{title}}</title>
     <style>
     body {
-        max-width: 650px;
-        margin: 40px auto;
-        padding: 0 10px;
-        font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         color:#101113;
         background:#edf4fe
-    }
-
-    h1, h2, h3 {
-        line-height:1.2
-    }
-
-    img {
-        display: block;
-        width:100%;
-        max-width:600px;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 15px;
     }
 
     @media (prefers-color-scheme: dark) {
@@ -45,9 +28,9 @@ title: Christa's WebZone
             color: #6673ff
         }
     }
-    </style>
+</style>
 </head>
 <body>
-    {{content | safe}}
+    <script type="module" src="{{ content | safe }}"></script>
 </body>
 </html>
